ConsultingHub/force-app/main/default/objects/Platform_App__c/Platform_App__c.object-meta.xml
<CustomObject>
    <label>Platform App</label>
    <nameField>
        <label>App Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>