ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/Accessibility__c.field-meta.xml
<CustomField>
    <fullName>Accessibility__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin &amp; Developer Tools</fullName>
            </value>
            <value>
                <fullName>Connected App</fullName>
            </value>
            <value>
                <fullName>Data Cleansing</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Document Management</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>IT Management</fullName>
            </value>
            <value>
                <fullName>Product Feature</fullName>
            </value>
            <value>
                <fullName>Productivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>