ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/Admin_Persona__c.field-meta.xml
<CustomField>
    <fullName>Admin_Persona__c</fullName>
    <label>Admin Persona</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accidental</fullName>
                <label>Accidental Admin</label>
            </value>
            <value>
                <fullName>Also</fullName>
                <label>Also Admin</label>
            </value>
            <value>
                <fullName>Adept</fullName>
                <label>Adept Admin</label>
            </value>
            <value>
                <fullName>All-star</fullName>
                <label>All-star Admin</label>
            </value>
            <value>
                <fullName>Accelerated</fullName>
                <label>Accelerated Admin</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>