ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/AP_Accelerated_Admin__c.field-meta.xml
<CustomField>
    <fullName>AP_Accelerated_Admin__c</fullName>
    <formula>INCLUDES( Admin_Persona__c , &quot;Accelerated&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accelerated Admin</label>
    <type>Checkbox</type>
</CustomField>