ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/AP_Accidental_Admin__c.field-meta.xml
<CustomField>
    <fullName>AP_Accidental_Admin__c</fullName>
    <formula>INCLUDES( Admin_Persona__c , &quot;Accidental&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accidental Admin</label>
    <type>Checkbox</type>
</CustomField>