ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/AP_Adept_Admin__c.field-meta.xml
<CustomField>
    <fullName>AP_Adept_Admin__c</fullName>
    <formula>INCLUDES( Admin_Persona__c , &quot;Adept&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adept Admin</label>
    <type>Checkbox</type>
</CustomField>