ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/AP_All_star_Admin__c.field-meta.xml
<CustomField>
    <fullName>AP_All_star_Admin__c</fullName>
    <formula>INCLUDES( Admin_Persona__c , &quot;All-star&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All-star Admin</label>
    <type>Checkbox</type>
</CustomField>