ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/AP_Also_Admin__c.field-meta.xml
<CustomField>
    <fullName>AP_Also_Admin__c</fullName>
    <formula>INCLUDES(  Admin_Persona__c , &quot;Also&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Also Admin</label>
    <type>Checkbox</type>
</CustomField>