ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/Developer_Persona__c.field-meta.xml
<CustomField>
    <fullName>Developer_Persona__c</fullName>
    <label>Developer Persona</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Coder</fullName>
            </value>
            <value>
                <fullName>Cloud Architect</fullName>
            </value>
            <value>
                <fullName>Data Connector</fullName>
            </value>
            <value>
                <fullName>Quality Champion</fullName>
            </value>
            <value>
                <fullName>Product Definer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>