ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/DP_Cloud_Architect__c.field-meta.xml
<CustomField>
    <fullName>DP_Cloud_Architect__c</fullName>
    <formula>INCLUDES(  Developer_Persona__c  , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloud Architect</label>
    <type>Checkbox</type>
</CustomField>