ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/DP_Core_Coder__c.field-meta.xml
<CustomField>
    <fullName>DP_Core_Coder__c</fullName>
    <formula>INCLUDES(  Developer_Persona__c  , &quot;Core Coder&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Coder</label>
    <type>Checkbox</type>
</CustomField>