ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/DP_Data_Connector__c.field-meta.xml
<CustomField>
    <fullName>DP_Data_Connector__c</fullName>
    <formula>INCLUDES(  Developer_Persona__c  , &quot;Data Connector&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Connector</label>
    <type>Checkbox</type>
</CustomField>