ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/DP_Product_Definer__c.field-meta.xml
<CustomField>
    <fullName>DP_Product_Definer__c</fullName>
    <formula>INCLUDES(  Developer_Persona__c  , &quot;Product Definer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Definer</label>
    <type>Checkbox</type>
</CustomField>