ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/DP_Quality_Champion__c.field-meta.xml
<CustomField>
    <fullName>DP_Quality_Champion__c</fullName>
    <formula>INCLUDES(  Developer_Persona__c  , &quot;Quality Champion&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quality Champion</label>
    <type>Checkbox</type>
</CustomField>