ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/FA_Adoption__c.field-meta.xml
<CustomField>
    <fullName>FA_Adoption__c</fullName>
    <formula>INCLUDES( Functional_Area__c , &quot;Adoption&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adoption</label>
    <type>Checkbox</type>
</CustomField>