ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/FA_Analytics__c.field-meta.xml
<CustomField>
    <fullName>FA_Analytics__c</fullName>
    <formula>INCLUDES( Functional_Area__c , &quot;Analytics&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Analytics</label>
    <type>Checkbox</type>
</CustomField>