ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/FA_Data__c.field-meta.xml
<CustomField>
    <fullName>FA_Data__c</fullName>
    <formula>INCLUDES( Functional_Area__c , &quot;Data&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data</label>
    <type>Checkbox</type>
</CustomField>