ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/FA_Declarative_Customization__c.field-meta.xml
<CustomField>
    <fullName>FA_Declarative_Customization__c</fullName>
    <formula>INCLUDES( Functional_Area__c , &quot;Declarative Customization&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Declarative Customization</label>
    <type>Checkbox</type>
</CustomField>