ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/FA_Process_Automation__c.field-meta.xml
<CustomField>
    <fullName>FA_Process_Automation__c</fullName>
    <formula>INCLUDES( Functional_Area__c , &quot;Process Automation&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process Automation</label>
    <type>Checkbox</type>
</CustomField>