ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/FA_Programmatic_Customization__c.field-meta.xml
<CustomField>
    <fullName>FA_Programmatic_Customization__c</fullName>
    <formula>INCLUDES( Functional_Area__c , &quot;Programmatic Customization&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Programmatic Customization</label>
    <type>Checkbox</type>
</CustomField>