ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/FA_Security__c.field-meta.xml
<CustomField>
    <fullName>FA_Security__c</fullName>
    <formula>INCLUDES( Functional_Area__c , &quot;Security&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security</label>
    <type>Checkbox</type>
</CustomField>