ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/Internal_Rating__c.field-meta.xml
<CustomField>
    <fullName>Internal_Rating__c</fullName>
    <formula>If((Rating_Count__c &gt; 0), (Rating_Sum__c /  Rating_Count__c),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Rating</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>