ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/Latest_Release__c.field-meta.xml
<CustomField>
    <fullName>Latest_Release__c</fullName>
    <label>Latest Release</label>
    <type>Date</type>
</CustomField>