ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/Org_Access_Required__c.field-meta.xml
<CustomField>
    <fullName>Org_Access_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Org Access Required</label>
    <type>Checkbox</type>
</CustomField>