ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/Rating_Count__c.field-meta.xml
<CustomField>
    <fullName>Rating_Count__c</fullName>
    <label>Number of Reviews</label>
    <summaryForeignKey>Platform_App_Rating__c.Platform_App__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>