ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/Rating_Sum__c.field-meta.xml
<CustomField>
    <fullName>Rating_Sum__c</fullName>
    <label>Rating Sum</label>
    <summarizedField>Platform_App_Rating__c.Rating__c</summarizedField>
    <summaryForeignKey>Platform_App_Rating__c.Platform_App__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>