ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/Synced_with_Google__c.field-meta.xml
<CustomField>
    <fullName>Synced_with_Google__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced with Google</label>
    <type>Checkbox</type>
</CustomField>