ConsultingHub/force-app/main/default/objects/Platform_App__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <label>Website</label>
    <required>true</required>
    <type>Url</type>
</CustomField>