ConsultingHub/force-app/main/default/objects/Platform_App__c/listViews/Admin_Apps.listView-meta.xml
<ListView>
    <fullName>Admin_Apps</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Vendor__c</columns>
    <columns>Accessibility__c</columns>
    <columns>Functional_Area__c</columns>
    <columns>Internal_Rating__c</columns>
    <columns>Website__c</columns>
    <columns>AP_Accidental_Admin__c</columns>
    <columns>AP_Also_Admin__c</columns>
    <columns>AP_Adept_Admin__c</columns>
    <columns>AP_All_star_Admin__c</columns>
    <columns>AP_Accelerated_Admin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Admin_Persona__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Admin Apps</label>
</ListView>