ConsultingHub/force-app/main/default/objects/Platform_App__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Accessibility__c</columns>
    <columns>Pricing__c</columns>
    <columns>Availability__c</columns>
    <columns>Functional_Area__c</columns>
    <columns>Internal_Rating__c</columns>
    <columns>Website__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Functional_Area__c</field>
        <operation>equals</operation>
        <value>Declarative Customization,Programmatic Customization</value>
    </filters>
    <label>All Active</label>
</ListView>