ConsultingHub/force-app/main/default/objects/Platform_App__c/listViews/New_Apps.listView-meta.xml
<ListView>
    <fullName>New_Apps</fullName>
    <columns>NAME</columns>
    <columns>Accessibility__c</columns>
    <columns>Latest_Release__c</columns>
    <columns>Functional_Area__c</columns>
    <columns>Admin_Persona__c</columns>
    <columns>Developer_Persona__c</columns>
    <columns>Website__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Latest_Release__c</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:180</value>
    </filters>
    <label>New and Updated</label>
</ListView>